# ClavisPass

./: .easignore  .env  .env.example  .gitignore  AGENTS.md  App.tsx  LICENSE  README.md  app.config.js  app.json  babel.config.js  background.afdesign  build-info.json  eas.json  env.d.ts  icon.afdesign  index.css  index.html  package-lock.json  package.json  project-tree.txt  release.bat  release.js  release.sh  sync-version.js  tsconfig.json  updater.json  updater.json.sig  version.json  vitest.config.ts
.github/workflows/: android-dev-client.yml  ci.yml  deploy-homepage.yml  release.yml
android/: gradle.properties  settings.gradle
android/app/: build.gradle
browser-extension/: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vite.content.config.ts
browser-extension/public/: manifest.json
browser-extension/scripts/: package-firefox.ps1
docs/: project-context.md
docs/browser-extension/: native-messaging.md
homepage/: index.css  index.html  style.css
patches/: react-native-sodium-jsi+1.2.0.patch
plugins/: withAndroidApplicationId.js  withIosBundleIdentifier.js  withIosGoogleOAuthScheme.js  withIosGoogleOAuthScheme.test.ts
release/expo/: index.html  metadata.json
release/msi/: ClavisPass_1.0.0_x64_en-US.msi.zip.sig
release/nsis/: ClavisPass_1.0.0_x64-setup.nsis.zip.sig
scripts/: check-tauri-version-sync.js  generate-mobile-version-manifest.js  setup-native-host.ps1
src-tauri/: .gitignore  2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: desktop.json  migrated.json
src-tauri/icons/: icon.icns
src-tauri/src/: bridge_commands.rs  commands.rs  device_identity.rs  lib.rs  main.rs  screen_lock.rs
src-tauri/src/bridge/: host.rs  mod.rs  pairing.rs  path.rs  protocol.rs  session.rs  vault.rs  write.rs
src/api/: CloudStorageClient.ts  DeviceStorageClient.ts  DropboxClient.ts  GoogleDriveClient.ts  fetchData.ts  fetchDriveFiles.ts  fetchUserInfo.ts  generateNewToken.tsx  getData.ts  uploadData.ts
src/components/: AnalysisEntry.tsx  AnalysisEntryGradient.tsx  AnimatedContainer.tsx  Auth.tsx  Autocomplete.tsx  Backup.tsx  Blur.tsx  Button.tsx  CircularProgressBar.tsx  ContentProtection.tsx  CopyToClipboard.tsx  CustomTitlebar.tsx  DarkModeSwitch.tsx  Divider.tsx  EditMetaInfMenu.tsx  FadeInView.tsx  FolderFilter.tsx  Footer.tsx  GlobalErrorSnackbar.tsx  GlobalShortcuts.tsx  GoogleDrive.tsx  GoogleDriveLoginButton.tsx  GoogleDriveUser.tsx  Header.tsx  HomeFilterMenu.tsx  I18nBridge.tsx  ListItem.tsx  Login.tsx  ModuleContainer.tsx  PasswordTextbox.tsx  Pattern.tsx  QuickSelect.tsx  SettingsDivider.tsx  SettingsItem.tsx  SettingsQuickSelect.tsx  SettingsSwitch.tsx  Sync.tsx  TypeWriter.tsx  UpdateManager.tsx  UserInformation.tsx
src/configs/: TransitionSpecConfig.ts
src/contexts/: AuthProvider.tsx  CloudProvider.tsx  DataProvider.tsx  DevModeProvider.tsx  OnlineProvider.tsx  QuickSelectProvider.tsx  QuickSelectProviderNotTauri.tsx  SettingsProvider.tsx  ThemeProvider.tsx  TokenProvider.tsx
src/enums/: ModuleIconsEnum.ts  ModulesEnum.ts  PasswordStrengthLevel.ts  TemplateEnum.ts  ValueIconsEnum.ts  WifiTypeEnum.ts
src/events/: errorBus.ts
src/hooks/: useAppLifecycle.ts
src/i18n/: TranslationSchema.ts  index.ts
src/stacks/: Stack.tsx  (+6 more)
tests/: setup.ts
(+597 files in other folders)
