[package]
name = "ClavisPass"
version = "1.0.5"
description = "ClavisPass"
authors = ["you"]
license = ""
repository = ""
default-run = "app_main"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2", features = ["tray-icon"] }
keytar = "0.1.6"
tauri-plugin-shell = "2"
tauri-plugin-process = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]

[lib]
name = "app_lib"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-updater = "2"
tauri-plugin-deep-link = "2.0"
tauri-plugin-single-instance = "2.3.2"
tauri-plugin-cli = "2"

[[bin]]
name = "app_main"
path = "src/main.rs"
